force-app/main/default/objects/PWChrono_Salary_Slip__c/PWChrono_Salary_Slip__c.object-meta.xml
<CustomObject>
    <label>PWChrono Salary Slip</label>
    <nameField>
        <displayFormat>SLIP-{00000}</displayFormat>
        <label>Slip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Salary Slips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>