force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Account_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Masked__c</fullName>
    <description
  >Masked bank account number captured for document rendering. Never store the full number here.</description>
    <label>Account Number Masked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>