force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Account_Title_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Account_Title_Snapshot__c</fullName>
    <description>Bank account title frozen at generation time.</description>
    <label>Account Title Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>