force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Bank_Branch_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Snapshot__c</fullName>
    <description
  >Bank branch name or code frozen at generation time.</description>
    <label>Bank Branch Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>