force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Bank_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Snapshot__c</fullName>
    <description>Bank name frozen at generation time.</description>
    <label>Bank Name Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>