force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Basic_Pay__c.field-meta.xml
<CustomField>
    <fullName>Basic_Pay__c</fullName>
    <description
  >Basic pay captured from the effective salary assignment.</description>
    <label>Basic Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>