force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Canonical employee relationship for salary slips. All new payroll ownership and snapshot logic must use Contact.</description>
    <label>Employee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salary Slips</relationshipLabel>
    <relationshipName>PWChrono_Salary_Slips</relationshipName>
    <type>Lookup</type>
</CustomField>