force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <defaultValue>&quot;PKR&quot;</defaultValue>
    <description
  >ISO currency code frozen for the salary-slip snapshot.</description>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>