force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>Days_Worked__c</fullName>
    <description>Worked days represented by the snapshot.</description>
    <label>Days Worked</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>