force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Deduction_Details__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Details__c</fullName>
    <label>Deduction Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>