force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Overall document-generation and delivery status.</description>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Generated</fullName>
                <default>true</default>
                <label>Not Generated</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>