force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Department_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Department_Snapshot__c</fullName>
    <description>Employee department frozen at generation time.</description>
    <label>Department Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>