force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Designation_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Designation_Snapshot__c</fullName>
    <description>Employee designation frozen at generation time.</description>
    <label>Designation Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>