force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>Document_Reference__c</fullName>
    <description
  >Unique immutable reference printed on the generated payslip.</description>
    <label>Document Reference</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>