force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Earning_Details__c.field-meta.xml
<CustomField>
    <fullName>Earning_Details__c</fullName>
    <label>Earning Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>