force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Employee_Code_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code_Snapshot__c</fullName>
    <description>Employee code frozen at generation time.</description>
    <label>Employee Code Snapshot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>