force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Employee_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Snapshot__c</fullName>
    <description>Employee name frozen at generation time.</description>
    <label>Employee Name Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>