force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Father_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Father_Name_Snapshot__c</fullName>
    <description
  >Father or guardian name frozen at generation time when required on the document.</description>
    <label>Father Name Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>