force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description
  >Date and time at which the snapshot document was generated.</description>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>