force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who generated the immutable snapshot.</description>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Generated Salary Slips</relationshipLabel>
    <relationshipName>Generated_Salary_Slips</relationshipName>
    <type>Lookup</type>
</CustomField>