force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Government_ID_Masked__c.field-meta.xml
<CustomField>
    <fullName>Government_ID_Masked__c</fullName>
    <description
  >Masked government identifier captured for document rendering. Never store the full identifier here.</description>
    <label>Government ID Masked</label>
    <length>80</length>
    <type>Text</type>
</CustomField>