force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/IBAN_Masked__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Masked__c</fullName>
    <description
  >Masked IBAN captured for document rendering. Never store the full IBAN here.</description>
    <label>IBAN Masked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>