force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Net_Pay_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Net_Pay_In_Words__c</fullName>
    <description
  >Net pay rendered in words for the payslip document.</description>
    <label>Net Pay In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>