force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Paid_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Paid_Leave_Days__c</fullName>
    <description
  >Approved paid-leave days represented by the snapshot.</description>
    <label>Paid Leave Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>