force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>Date on which payment was or will be made.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>