force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Payroll_Period__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Period__c</fullName>
    <label>Payroll Period</label>
    <type>Date</type>
</CustomField>