force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>Last day covered by this payroll snapshot.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>