force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>First day covered by this payroll snapshot.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>