force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Salary Slip Portal Users</relationshipLabel>
    <relationshipName>Salary_Slip_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>