force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Salary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Salary_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Effective-dated salary assignment from which this immutable snapshot was generated.</description>
    <label>Salary Assignment</label>
    <referenceTo>PWChrono_Salary_Assignment__c</referenceTo>
    <relationshipLabel>Salary Slips</relationshipLabel>
    <relationshipName>PWChrono_Salary_Slips</relationshipName>
    <type>Lookup</type>
</CustomField>