force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <description
  >Date and time of the most recent successful delivery.</description>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>