force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >User responsible for the most recent successful delivery.</description>
    <label>Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sent Salary Slips</relationshipLabel>
    <relationshipName>Sent_Salary_Slips</relationshipName>
    <type>Lookup</type>
</CustomField>