force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Snapshot_Locked__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates that employee, bank, attendance, and payroll snapshot values must no longer be regenerated.</description>
    <label>Snapshot Locked</label>
    <type>Checkbox</type>
</CustomField>