force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Snapshot_Version__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >Version of the snapshot contract used to generate this salary slip.</description>
    <label>Snapshot Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>