force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/SWIFT_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_Snapshot__c</fullName>
    <description>SWIFT or BIC code frozen at generation time.</description>
    <label>SWIFT Snapshot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>