force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <description
  >Total payroll-calendar days represented by the snapshot.</description>
    <label>Total Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>