force-app/main/default/objects/PWChrono_Salary_Slip__c/fields/Unpaid_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Leave_Days__c</fullName>
    <description
  >Approved unpaid-leave days represented by the snapshot.</description>
    <label>Unpaid Leave Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>