force-app/main/default/objects/PWChrono_Salary_Slip__c/validationRules/Legacy_Portal_User_Must_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Legacy_Portal_User_Must_Match</fullName>
    <active>true</active>
    <description
  >Prevents the retained Portal User compatibility lookups from contradicting Employees__c during migration.</description>
    <errorConditionFormula>OR(
  AND(NOT(ISBLANK(Employee__c)), Employee__c &lt;&gt; Employees__c),
  AND(NOT(ISBLANK(Portal_Users__c)), Portal_Users__c &lt;&gt; Employees__c)
)</errorConditionFormula>
    <errorMessage
  >Legacy Portal User relationships must match the transition Portal User field.</errorMessage>
</ValidationRule>