force-app/main/default/objects/PWChrono_Salary_Slip__c/validationRules/Require_Canonical_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Canonical_Contact</fullName>
    <active>false</active>
    <description
  >Requires Contact__c as the canonical employee relationship. Activate only after Portal User links and existing payroll records are migrated.</description>
    <errorConditionFormula>ISBLANK(Contact__c)</errorConditionFormula>
    <errorMessage
  >Select the employee Contact before saving the salary slip.</errorMessage>
</ValidationRule>