force-app/main/default/objects/PWChrono_Salary_Slip__c/listViews/My_Salary_Slips.listView-meta.xml
<ListView>
    <fullName>My_Salary_Slips</fullName>
    <columns>NAME</columns>
    <columns>Payroll_Period__c</columns>
    <columns>Gross_Pay__c</columns>
    <columns>Total_Deductions__c</columns>
    <columns>Net_Pay__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Salary Slips</label>
</ListView>